Basic update to 1.18.1